# kk-euler-swarm

euler-kk-swarm/: README.md  swarm_control.py
euler-kk-swarm/src/camtoros/: CMakeLists.txt  package.xml
euler-kk-swarm/src/camtoros/config/: tf.rviz
euler-kk-swarm/src/camtoros/include/camtoros/: init_camera.h
euler-kk-swarm/src/camtoros/init/: init_camera.cc
euler-kk-swarm/src/camtoros/scripts/: calibrator_reference.py  hist_reference_generate.py
euler-kk-swarm/src/camtoros/src/: camtoros.cpp
euler-kk-swarm/src/global_vision/: CMakeLists.txt  package.xml
euler-kk-swarm/src/global_vision/include/global_vision/: odomPub.hpp
euler-kk-swarm/src/global_vision/launch/: start.launch  start.launch.py
euler-kk-swarm/src/global_vision/src/: odomPub.cpp  stop.cpp
euler-kk-swarm/src/kkswarm_msgs/: CMakeLists.txt  package.xml
euler-kk-swarm/src/swarm/c6_formation/: CMakeLists.txt  package.xml  packageInfo.mat
euler-kk-swarm/src/swarm/c6_formation/include/c6_formation_ros2/: c6_formation_ros2.h  c6_formation_ros2_private.h  c6_formation_ros2_types.h  ros2nodeinterface.h  rtGetInf.h  rtGetNaN.h  rt_defines.h  rt_nonfinite.h  rtmodel.h  rtwtypes.h  slros2_initialize.h  slros_busmsg_conversion.h  visibility_control.h
euler-kk-swarm/src/swarm/c6_formation/src/: c6_formation_ros2.cpp  c6_formation_ros2_data.cpp  main.cpp  ros2nodeinterface.cpp  rtGetInf.cpp  rtGetNaN.cpp  rt_nonfinite.cpp  slros2_initialize.cpp  slros_busmsg_conversion.cpp
euler-kk-swarm/src/tcp_communication/: CMakeLists.txt  package.xml
euler-kk-swarm/src/tcp_communication/include/tcp_communication/: tcpDriverNode.h
euler-kk-swarm/src/tcp_communication/src/: tcpDriverNode.cpp
